Refs #97956 fixed navbar z-index where edit bar should be above navbar on desktop

--- a/src/forests/theme/skins/fise_theme_styles/components/header.less
+++ b/src/forests/theme/skins/fise_theme_styles/components/header.less
@@ -1,8 +1,5 @@
 @import "variables";
 
-.navbar-fixed-bottom, .navbar-fixed-top {
-  z-index: 100;
-}
 
 .navbar-fixed-bottom .navbar-collapse, .navbar-fixed-top .navbar-collapse {
   max-height: calc(100vh - 95px); overflow: auto;
@@ -145,7 +142,7 @@
 .login-container {
   top: calc(100% - 2rem);
   right: calc(100%);
-  margin-right: -47.5px;
+  margin-right: -51px;
 }
 
 .header-image {
@@ -189,8 +186,8 @@
 #portal-searchbox {
   float: none;
   order: 2;
-  margin: -16px 3px 0 auto;
-  box-shadow: -2px 6px 5px 0px #00000078;
+  margin: -16px 0 0 auto;
+  box-shadow: -2px 6px 5px 0 #00000078;
 }
 #portal-searchbox form {
   max-width: 1024px;
@@ -379,6 +376,11 @@
 
   #portal-personaltools-wrapper {
     display: block;
+  }
+}
+@media (min-width:768px) {
+  .navbar-fixed-bottom, .navbar-fixed-top {
+    z-index: 89;
   }
 }
 
