--- a/src/forests/theme/skins/fise_theme_styles/components/portlets.less
+++ b/src/forests/theme/skins/fise_theme_styles/components/portlets.less
@@ -10,7 +10,6 @@ dl.portlet dt {
   background-color: transparent;
   padding: 0.42em 0;
   font-size: 150%;
-  font-family: Roboto;
   margin-bottom: 0.25em;
   font-weight: normal;
 }
@@ -42,5 +41,4 @@ dl.portlet ul.navTree li a:hover {
 div.managePortletsLink, a.managePortletsFallback  {
   background-color: white;
   border: 2px solid green;
-  width: 25rem;
 }
